Add recipes pages and links to them in index.html

--- a/index.html
+++ b/index.html
@@ -2,10 +2,15 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Odin Recipes</title>
+        <title>Vegan Saiyan</title>
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
+        <h1>Vegan Saiyan</h1>
+
+        <a href="recipes/buddhas-delight.html">Buddha's Delight</a>
+        <a href="recipes/miso-soup.html">Miso Soup</a>
+        <a href="recipes/chili.html">Sweet Potato Chili</a>
+
     </body>
 </html>
