Add recipe page content

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Vegan Saiyan</h1>
-
+        <img src="https://c.tenor.com/hIgjEiS6DsQAAAAC/goku-eating.gif" alt="Goku eating">
+<br>
         <a href="recipes/buddhas-delight.html">Buddha's Delight</a>
         <a href="recipes/miso-soup.html">Miso Soup</a>
         <a href="recipes/chili.html">Sweet Potato Chili</a>
