--- a/recipes/buddhas-delight.html
+++ b/recipes/buddhas-delight.html
@@ -7,5 +7,44 @@
 
     <body>
         <h1>Buddha's Delight</h1>
+        <img src="../img/buddha.jpeg" alt="Buddha's Delight" width="225">
+        <h2>Description</h2>
+        <p>Buddha's Delight or Lo Han Jai is the ultimate vegan stir-fry with delicate flavors and wholesome goodness! Serve with rice.</p>
+        
+        <h2>Ingredients</h2>
+        <ul>
+                <li>⅔ cup water</li>
+                <li>⅔ fermented bean curd blocks</li>
+                <li>1 tablespoon vegetarian mushroom oyster sauce</li>
+                <li>⅓ teaspoon mushroom seasoning</li>
+                <li>⅙ teaspoon salt</li>
+                <li>⅙ teaspoon cornstarch</li>
+                <li>⅙ teaspoon sesame oil</li>
+                <li>⅙ teaspoon white sugar</li>
+                <li>ground black pepper to taste</li>
+                <li>1 teaspoons vegetable oil</li>
+                <li>⅔ (1/2 inch) pieces fresh ginger, peeled and thinly sliced</li>
+                <li>1 ⅓ ounces fried tofu, cut into 4 pieces</li>
+                <li>⅔ ounces lotus root, peeled and thinly sliced</li>
+                <li>⅔ ounces ginkgo nuts</li>
+                <li>1 ounce dried lily flowers, soaked in hot water</li>
+                <li>2 ⅔ dried red dates</li>
+                <li>1 ⅔ fresh shiitake mushrooms, diced</li>
+                <li>⅓ carrot, sliced</li>
+                <li>2 ⅓ ounces napa cabbage, cut into small pieces</li>
+                <li>⅔ ounces snow peas</li>
+                <li>⅔ ounces fresh black fungus</li>
+                <li>⅓ (2 ounce) package cellophane noodles</li>
+                <li>1 teaspoons goji berries, soaked in water</li>
+                <li>⅙ teaspoon salt</li>
+                <li>1 ounce dried black moss (nostoc), rehydrated</li>
+        </ul>
+        <h2>Directions</h2>
+        <ol>
+            <li>Mix water, fermented tofu blocks, oyster sauce, mushroom seasoning, 1/2 teaspoon salt, cornstarch, sesame oil, white sugar, and pepper together in a bowl until fermented tofu has dissolved.</li>
+            <li>Cook vegetable oil and ginger in a skillet over medium heat for 30 seconds. Add tofu, lotus root, ginkgo nuts, lily flowers, red dates, shiitake mushrooms, and carrot. Cook until golden brown, about 5 minutes. Add cabbage, snow peas, black fungus, noodles, goji berries, and salt. Cook for another 3 minutes. Add moss and fermented tofu mixture; bring to a boil. Remove from heat and transfer to a serving dish. </li>
+        </ol>
+
+        <a href="../index.html">Back to Recipes</a>
     </body>
 </html>
