Add nutrition facts

--- a/recipes/buddhas-delight.html
+++ b/recipes/buddhas-delight.html
@@ -45,6 +45,9 @@
             <li>Cook vegetable oil and ginger in a skillet over medium heat for 30 seconds. Add tofu, lotus root, ginkgo nuts, lily flowers, red dates, shiitake mushrooms, and carrot. Cook until golden brown, about 5 minutes. Add cabbage, snow peas, black fungus, noodles, goji berries, and salt. Cook for another 3 minutes. Add moss and fermented tofu mixture; bring to a boil. Remove from heat and transfer to a serving dish. </li>
         </ol>
 
+        <h2>Nutrition Facts</h2>
+        <p><strong>Per Serving:</strong> 542 calories; protein 13.4g; carbohydrates 98.6g; fat 14.5g; cholesterol 0.1mg; sodium 1321.1mg.</p>
+
         <a href="../index.html">Back to Recipes</a>
     </body>
 </html>
