--- a/recipes/chili.html
+++ b/recipes/chili.html
@@ -36,6 +36,9 @@
         <li>Bring vegetable broth mixture to a boil, reduce heat to medium, and simmer until sweet potatoes are tender, 20 to 25 minutes. Stir tomatoes and kidney beans into sweet potato mixture and simmer over low heat until flavors have blended, about 45 minutes.</li>
     </ol>
 
+    <h2>Nutrition Facts</h2>
+    <p><strong>Per Serving:</strong> 215 calories; protein 8.4g; carbohydrates 42.7g; fat 1.4g; sodium 659.2mg.</p>
+
     <a href="../index.html">Back to Recipes</a>
 </body>
 </html>
