--- a/recipes/miso-soup.html
+++ b/recipes/miso-soup.html
@@ -39,6 +39,9 @@
         <li>Heat remaining olive oil in a Dutch oven over medium-high heat. Add carrots and onion and stir-fry until tender, about 5 minutes. Add mushrooms, garlic, and turmeric. Stir in water, vegetable broth, and quinoa. Reduce heat and let simmer for 5 minutes. Add tofu and kale; cover, and let simmer for 3 minutes. Whisk in miso; turn off heat and stir in bell pepper and green onions. Serve immediately.</li>
     </ol>
 
+    <h2>Nutrition Facts</h2>
+    <p><strong>Per Serving:</strong> 207 calories; protein 11.2g; carbohydrates 28.1g; fat 7.2g; sodium 651.9mg. </p>
+
     <a href="../index.html">Back to Recipes</a>
 </body>
 </html>
