Add CSS, rename recipe pages and add new images

--- a/index.html
+++ b/index.html
@@ -2,16 +2,25 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Vegan Saiyan</title>
+        <title>Saiyan Shack</title>
+        <link rel="stylesheet" href="styles.css">
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Philosopher&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <h1>Vegan Saiyan</h1>
-        <img src="https://c.tenor.com/hIgjEiS6DsQAAAAC/goku-eating.gif" alt="Goku eating">
+        <h1>Saiyan Shack</h1>
+        <img class="saiyan" src="https://c.tenor.com/hIgjEiS6DsQAAAAC/goku-eating.gif" alt="Goku eating">
+        <img class="left" src="img/shenron.png" alt="shenlon left">
+        <img class="right" src="img/shenron.png" alt="shenlon right">
 <br>
-        <a href="recipes/buddhas-delight.html">Buddha's Delight</a>
-        <a href="recipes/miso-soup.html">Miso Soup</a>
-        <a href="recipes/chili.html">Sweet Potato Chili</a>
+        <div class="links">
+        <a href="recipes/friedrice.html">Fried Rice</a>
+        <a href="recipes/chowmein.html">Chow Mein</a>
+        <a href="recipes/mapotofu.html">Mapo Tofu</a>
+        </div>
 
+        <img src="img/dragonball.png" alt="dragonball" class="dragonball">
     </body>
 </html>
